# LinoWritingV2

./: .gitignore  CLAUDE.md  PLAN_BACKEND.md  PLAN_FRONTEND.md  PROJECT_PLAN.md
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 202605220001_initial_schema.py  202605230001_add_provider_keys_and_settings.py  202605230002_add_chapter_source.py  202605250001_add_character_author_notes.py  202605250002_add_provider_key_agent_role.py  202605250003_add_timeline_event_edited_at.py  202605260001_add_character_pending_field_highlights.py  202605260002_drop_character_frozen_voice.py  (+7 more)
Backend/app/: __init__.py  auth.py  config.py  db.py  errors.py  main.py
Backend/deploy/: Caddyfile  README.md  backup.sh  deploy-hz.sh  docker-compose.prod.yml  linowriting-api.service  nginx-linowriting.conf
Backend/tests/: conftest.py  test_access_log_redaction.py  test_admin_logs.py  test_admin_reset.py  test_agent_logging_retention.py  test_agents_with_mock.py  test_alembic_encrypt_migration.py  test_auth.py  test_auth_pairing.py  test_books.py  test_chapter_extract.py  test_chapter_import.py  test_chapter_patch_allowlist.py  test_chapters_flow.py  test_character_author_notes.py  test_character_parse.py  test_characters.py  test_context_pack.py  test_disconnect_cancellation.py  test_env_migration.py  test_error_i18n.py  test_expander_focus_traits.py  test_export.py  test_field_highlights.py  test_llm_error_sanitization.py  test_llm_factory.py  test_llm_usage_tracking.py  test_non_stream_timeout.py  test_outline.py  test_partial_draft_save.py  test_per_agent_factory.py  test_personas.py  test_phase2_personas_runtime.py  test_phase3_writer_directive.py  test_phase5_end_to_end.py  test_provider_key_encryption.py  test_provider_keys.py  test_rate_limit.py  test_revise.py  test_security_headers.py  (+9 more)
(+233 files in other folders)
