[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lino-writing-backend"
version = "0.9.3"
description = "Backend API for Lino Writing v2"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  # v0.8 T-1: ProviderKey Fernet encryption (AES-128-CBC + HMAC-SHA256). Used
  # by app/services/encryption.py + the 202605260003 data migration. Pinned
  # to >=42 so we get the modern cryptography backend (legacy <3.4 paths
  # are removed) — Fernet API itself has been stable since 0.5.
  "cryptography>=42",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic-settings>=2.4",
  "psycopg[binary]>=3.2",
  # v0.8 T-2 (§5.T): per-token rate limiting. ``slowapi`` is a thin
  # FastAPI/Starlette wrapper over the ``limits`` library; we use it as
  # an in-memory bucket store only (HZ prod is a single uvicorn worker,
  # §5.S.2, so no Redis backing is needed).
  "slowapi>=0.1.9",
  "SQLAlchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
